Resolves: tdf#101187 colossal page width wraps around if doubled

when trying to generate a reasonable upper bound clipping region

Change-Id: I53f8ea1bd6c52c88284e1f41369f83492d078b5d
(cherry picked from commit 2fd88ab1cbb4690a770ca2ca5d66157ec4906a2e)
Reviewed-on: https://gerrit.libreoffice.org/33009
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 98fd1628178a9c6ac119a72c5f43257c129ba72b)